[package]
name = "winver"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0" # For Rust 2021

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.48.0"
default-features = false
features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_System_Wmi",
    "Win32_System_Rpc",
    "Win32_System_Ole",
]

[package.metadata.docs.rs]
default-target = "stable-x86_64-pc-windows-msvc"
